commit tree 1d5e5d9e5d845b1213a207572ded1eca5cc7ff33

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,4 +1,5 @@
 Classroom Info
 <%= render 'classroom' %> 
-
-<%= render partial: "students/student", locals: {student: @classroom.students} %>
+<% @classroom.students.each do |student| %>
+<%= render partial: "students/student", locals: {student: student} %>
+<% end %>
