--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,1 +1,4 @@
 <%= render 'form' %>
+<%# <% @student.each do |student| %>
+<%= render partial: "form", locals: {student: @student} %>
+# <%# <% end %> 
